--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1></h1>
+        <div>
+            <div id="info-container">
+                <h1>Generate a<br>random password</h1>
+                <h3>Never use an insecure password again.</h3>
+            </div>
+            <div id="input-container">
+                <button>Generate passwords</button>
+            </div>
+            <hr/>
+            <div id="result-container">
+                <div class="generated-password">
+                    <p id="password1"></p>
+                </div>
+                <div class="generated-password">
+                    <p id="password2"></p>
+                </div>
+            </div>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
