Added CSS styling to input button & content separator

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     </head>
     <body>
         <div>
-            <div id="info-container">
+            <div id="info-container" class="container">
                 <h1 id="title-text">Generate a<br><span id="text-highlight">random password</span></h1>
                 <h3 id="slogan-text">Never use an insecure password again.</h3>
             </div>
-            <div id="input-container">
+            <div id="input-container" class="container">
                 <button class="input-btn">Generate passwords</button>
             </div>
             <hr class="separator"/>
-            <div id="result-container">
+            <div id="result-container" class="container">
                 <div class="generated-password">
                     <p id="password1"></p>
                 </div>
