--- a/index.html
+++ b/index.html
@@ -13,18 +13,15 @@
                 <h3 id="slogan-text">Never use an insecure password again.</h3>
             </div>
             <div id="input-container" class="container">
-                <button class="input-btn">Generate passwords</button>
+                <button class="input-btn" onClick="generatePassword()">Generate password</button>
             </div>
             <hr class="separator"/>
             <div id="result-container" class="container">
                 <div class="generated-password">
-                    <p id="password1"></p>
-                </div>
-                <div class="generated-password">
-                    <p id="password2"></p>
+                    <p id="password"></p>
                 </div>
             </div>
         </div>
-        <script src="index.js"></script>
+        <script type="module" src="src/index.js"></script>
     </body>
 </html>
