--- a/index.html
+++ b/index.html
@@ -8,12 +8,43 @@
     </head>
     <body>
         <div>
-            <div id="info-container" class="container">
-                <h1 id="title-text">Generate a<br><span id="text-highlight">random password</span></h1>
-                <h3 id="slogan-text">Never use an insecure password again.</h3>
-            </div>
-            <div id="input-container" class="container">
-                <button class="input-btn" onClick="generatePassword()">Generate password</button>
+            <div id="flex-container">
+                <div id="info-container" class="container">
+                    <h1 id="title-text">Generate a<br><span id="text-highlight">random password</span></h1>
+                    <h3 id="slogan-text">Never use an insecure password again.</h3>
+                    <div id="input-container" class="container">
+                        <button class="input-btn" onClick="generatePassword()">Generate password</button>
+                    </div>
+                </div>
+                <div id="options-container" class="container">
+                    <div id="advanced-options">
+                        <div>
+                            <h2 id="include-heading">Include:</h2>
+                                <label class="label-container">lowercase
+                                    <input type="checkbox" checked="checked">
+                                    <span class="checkmark"></span>
+                                </label>
+
+                                <label class="label-container">uppercase
+                                    <input type="checkbox" checked="checked">
+                                    <span class="checkmark"></span>
+                                </label>
+
+                                <label class="label-container">numbers
+                                    <input type="checkbox" checked="checked">
+                                    <span class="checkmark"></span>
+                                </label>
+
+                                <label class="label-container">symbols
+                                    <input type="checkbox" checked="checked">
+                                    <span class="checkmark"></span>
+                                </label>
+                        </div>
+                        <!-- <div>
+                            <h2 id="length-heading">Password Length:</h2>
+                        </div> -->
+                    </div>
+                </div>
             </div>
             <hr class="separator"/>
             <div id="result-container" class="container">
