Added JS logic for checkboxes

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
                         <div>
                             <h2 id="include-heading">Include:</h2>
                                 <label class="label-container">lowercase
-                                    <input type="checkbox" checked="checked">
+                                    <input type="checkbox" checked="checked" id="lower">
                                     <span class="checkmark"></span>
                                 </label>
 
                                 <label class="label-container">uppercase
-                                    <input type="checkbox" checked="checked">
+                                    <input type="checkbox" checked="checked" id="upper">
                                     <span class="checkmark"></span>
                                 </label>
 
                                 <label class="label-container">numbers
-                                    <input type="checkbox" checked="checked">
+                                    <input type="checkbox" checked="checked" id="numbers">
                                     <span class="checkmark"></span>
                                 </label>
 
                                 <label class="label-container">symbols
-                                    <input type="checkbox" checked="checked">
+                                    <input type="checkbox" checked="checked" id="symbols">
                                     <span class="checkmark"></span>
                                 </label>
                         </div>
