Added HTML/CSS for password length configuration

--- a/index.html
+++ b/index.html
@@ -40,9 +40,14 @@
                                     <span class="checkmark"></span>
                                 </label>
                         </div>
-                        <!-- <div>
+                        <div>
                             <h2 id="length-heading">Password Length:</h2>
-                        </div> -->
+                            <div id="plus-minus-container">
+                                <button class="input-btn plus-minus-btn">-</button>
+                                <p>15</p>
+                                <button class="input-btn plus-minus-btn">+</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
