Fixed 'click to copy' bug

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <hr class="separator"/>
             <div id="result-container" class="container">
                 <div class="generated-password tooltip tooltip-copy" onClick="copyPassword()">
-                    <span class="tooltip-text" id="tooltip-text-copy">Click to copy</span>
+                    <span class="tooltip-text" id="tooltip-text-copy"></span>
                     <p id="password" ></p>
                 </div>
             </div>
