Added light/dark mode toggle functionality

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 <body>
   <main id="flex-container">
 
+    <div id="toggle-container">
+        <label class="switch">
+            <input type="checkbox" id="mode-toggle" aria-label="Toggle light/dark mode">
+            <span class="slider"></span>
+        </label>
+    </div>
+
+
     <!-- Title & Info -->
     <section id="info-container" class="container">
         <h1 id="title-text">
