--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Password Generator</title>
 
   <!-- Fonts & Styles -->
-  <link rel="stylesheet" href="src/index.css" />
+  <link rel="stylesheet" href="./src/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -111,6 +111,6 @@
     </section>
   </main>
 
-  <script type="module" src="src/index.js"></script>
+  <script type="module" src="./src/script.js"></script>
 </body>
 </html>
